<resources>
    <string name="app_name">STUDENT PRO</string>
    <string name="userName"> Username</string>
    <string name="password"> Password</string>
    <string name="email"> Email</string>
    <string name="confirmpass"> Confirm Password</string>
    <string name="logout"> Log Out</string>
    <string name="grupaMea"> Grupa mea</string>
    <string name="paginaMea"> Pagina Mea</string>
    <string name="altele"> Mai multe</string>
</resources>